--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -5,12 +5,10 @@
     <title>{{title}}</title>
   </head>
   <body>
-    <h1>Home Page</h1>
     {{> header}}
     <p>
-        <h3>{{screamIt welcome}}</h3>
-        <h3> Portfolio page <h3>
+        <h3> Projects page</h3>
     </p>
-      {{> footer}}
+    {{> footer}}
   </body>
 </html>
