--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -2,5 +2,6 @@
     <meta charset='utf-8'>
     <p><a href='/'>Home</a></p>
     <p><a href='/about'>About</a></p>
+    <p><a href='/projects'>projects</a></p>
   <title>{{title}}</title>
 </head>
